--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ let defaultCandidates = [
     { name: "", votes: 0 }
 ];
 
-let ADMIN_PASSWORD = "admin123"; // 🔐 CHANGE THIS PASSWORD
+let ADMIN_PASSWORD = "CBTMediaAdmin321"; // 🔐 CHANGE THIS PASSWORD
 let isUnlocked = false;
 
 // ✅ Load saved data
