--- a/index.html
+++ b/index.html
@@ -5,75 +5,52 @@
 <title>Board of Trustee 2026 Election</title>
 
 <style>
-    body {
-        margin: 0;
-        overflow: hidden;
-        font-family: 'Bebas', sans-serif;
-        background: url("board-design 2.png") no-repeat center center fixed;
-        background-size: 100%;
-    }
+body {
+    margin: 0;
+    overflow: hidden;
+    font-family: sans-serif;
+    background: url("board-design 2.png") no-repeat center center fixed;
+    background-size: cover; /* FIXED */
+}
 
-    .wrapper {
-        display: flex;
-        height: 100vh;
-        align-items: flex-end;
-        justify-content: space-around;
-        padding: 0 0%;
-        box-sizing: border-box;
-    }
+.wrapper {
+    display: flex;
+    height: 100vh;
+    align-items: flex-end;
+    justify-content: space-around;
+    box-sizing: border-box;
+}
 
-    .candidate {
-        width: 10%;
-        text-align: center;
-        color: white;
-        padding-bottom: 60px;
-    }
+.candidate {
+    width: 10%;
+    text-align: center;
+    color: white;
+    padding-bottom: 60px;
+}
 
-    .candidate-name {
-        font-size: 1.2vw;
-        font-weight: bold;
-        text-transform: uppercase;
-        margin-bottom: 10px;
-    }
+.candidate-name {
+    font-size: 1.2vw;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
 
-    .score {
-        font-size: 7vw;
-        font-weight: 900;
-        transition: transform 0.2s ease;
-    }
+.score {
+    font-size: 7vw;
+    font-weight: 900;
+    transition: transform 0.2s ease;
+}
 
-    .votes-label {
-        font-size: 1vw;
-        letter-spacing: 2px;
-        margin-top: 4px;
-        font-family: Gilroy;
-        opacity: 50;
+.animate {
+    transform: scale(1.3);
+    text-shadow: 0 0 20px #00c3ff;
+}
 
-    }
-
-    .animate {
-        transform: scale(1.3);
-        color: #ffffff;
-        text-shadow: 0 0 20px #00c3ff;
-    }
-
-    button {
-            padding: 8px 12px;
-            margin: 5px;
-            border: none;
-            border-radius: 5px;
-            cursor:default;
-    }        
-    .minus-btn {
-            background: #5e001e;
-            color: white;
-             font-family: Gilroy;
-        opacity: 50;
-
-    }
-
-
-
+/* Fully invisible button */
+.minus-btn {
+    opacity: 0;
+    pointer-events: none;
+}
 </style>
 </head>
 
@@ -82,22 +59,10 @@
 <div class="wrapper" id="candidates"></div>
 
 <script>
-let defaultCandidates = [
-    { name: "", votes: 0 },
-    { name: "", votes: 0 },
-    { name: "", votes: 0 },
-    { name: "", votes: 0 },
-    { name: "", votes: 0 },
-    { name: "", votes: 0 },
-    { name: "", votes: 0 },
-    { name: "", votes: 0 },
-    { name: "", votes: 0 }
-];
+let defaultCandidates = Array(9).fill().map(() => ({ name: "", votes: 0 }));
 
-let ADMIN_PASSWORD = "admin"; // 🔐 CHANGE THIS PASSWORD
 let isUnlocked = false; // 🔒 Locked by default
 
-// ✅ Load saved data
 let candidates = JSON.parse(localStorage.getItem("electionData")) || defaultCandidates;
 
 function saveData() {
@@ -120,7 +85,7 @@ function render() {
 }
 
 function animateCounter(element, start, end) {
-    let duration = 400;
+    let duration = 300;
     let startTime = null;
 
     function update(currentTime) {
@@ -137,7 +102,7 @@ function animateCounter(element, start, end) {
     }
 
     element.classList.add("animate");
-    setTimeout(() => element.classList.remove("animate"), 250);
+    setTimeout(() => element.classList.remove("animate"), 200);
 
     requestAnimationFrame(update);
 }
@@ -158,96 +123,71 @@ function minusVote(index) {
     }
 }
 
-   // 🔐 RESET PASSWORD
-let RESET_PASSWORD = "admin"; // CHANGE THIS
-
-function resetAllVotes() {
-    let entered = prompt("Enter Reset Password:");
-
-    if (entered === RESET_PASSWORD) {
-
-        // Reset all scores
-        candidates.forEach(c => c.votes = 0);
-        saveData();
-        render();
-
-        // 🔓 Auto-unlock editing after reset
-        isUnlocked = true;
-
-        alert("All votes have been reset ✅\nEditing Unlocked 🔓");
-    } else {
-        alert("Wrong Reset Password ❌");
-    }
-}
-
-
-
-// 🔐 Secure Versions
 function secureAdd(index) {
-    if (!isUnlocked) return; // 🚫 Do nothing if locked
+    if (!isUnlocked) return;
     addVote(index);
 }
 
 function secureMinus(index) {
-    if (!isUnlocked) return; // 🚫 Do nothing if locked
+    if (!isUnlocked) return;
     minusVote(index);
 }
 
+/* 🔐 RESET (CTRL + ALT + R) */
+function resetAllVotes() {
+    let entered = prompt("Enter Reset Password:");
+    if (entered === "admin") {
+        candidates.forEach(c => c.votes = 0);
+        saveData();
+        render();
+        isUnlocked = true; // unlock after reset
+        alert("All votes reset ✅ Editing unlocked 🔓");
+    } else {
+        alert("Wrong Password ❌");
+    }
+}
 
-// 🎹 Keyboard Control (Protected)
+/* 🎹 Keyboard Control */
 document.addEventListener("keydown", function(event) {
 
-    // 🔓 TOGGLE EDIT MODE (CTRL + ALT + Z)
+    /* Toggle Edit Mode (CTRL + ALT + Z) */
     if (event.ctrlKey && event.altKey && event.key.toLowerCase() === "z") {
+        event.preventDefault();
         isUnlocked = !isUnlocked;
-
-        if (isUnlocked) {
-            console.log("Editing Unlocked 🔓");
-        } else {
-            console.log("Editing Locked 🔒");
-        }
+        console.log(isUnlocked ? "Unlocked 🔓" : "Locked 🔒");
         return;
     }
 
-    // 🚫 Stop if locked
+    /* Reset (CTRL + ALT + R) */
+    if (event.ctrlKey && event.altKey && event.key.toLowerCase() === "r") {
+        event.preventDefault();
+        resetAllVotes();
+        return;
+    }
+
     if (!isUnlocked) return;
 
-    // ➕ Add vote (1–9)
+    let number = null;
+
     if (event.code.startsWith("Digit")) {
-        let number = parseInt(event.code.replace("Digit", ""));
-        if (number >= 1 && number <= 9) {
-            addVote(number - 1);
-        }
+        number = parseInt(event.code.replace("Digit", ""));
     }
 
     if (event.code.startsWith("Numpad")) {
-        let number = parseInt(event.code.replace("Numpad", ""));
-        if (number >= 1 && number <= 9) {
-            addVote(number - 1);
-        }
+        number = parseInt(event.code.replace("Numpad", ""));
     }
 
-    // ➖ Minus vote (SHIFT + 1–9)
-    if (event.shiftKey && event.code.startsWith("Digit")) {
-        let number = parseInt(event.code.replace("Digit", ""));
-        if (number >= 1 && number <= 9) {
+    if (number >= 1 && number <= 9) {
+        if (event.shiftKey) {
             minusVote(number - 1);
+        } else {
+            addVote(number - 1);
         }
     }
 });
 
-
-// 🔒 Manual Lock (Optional)
-function lockSystem() {
-    isUnlocked = false;
-    alert("System Locked 🔒");
-}
-
-    
-
 render();
 </script>
-
 
 </body>
 </html>
