--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 body {
     margin: 0;
     overflow: hidden;
-    font-family: sans-serif;
+    font-family: Bebas, sans-serif;
     background: url("board-design 2.png") no-repeat center center fixed;
     background-size: cover; /* FIXED */
 }
