--- a/index.html
+++ b/index.html
@@ -45,159 +45,13 @@ body {
     transform: scale(1.3);
     text-shadow: 0 0 20px #00c3ff;
 }
+
+/* Fully invisible button */
+.minus-btn {
+    opacity: 0;
+    pointer-events: none;
+}
 </style>
 </head>
 
-<body>
-
-<div class="wrapper" id="candidates"></div>
-
-<script type="module">
-
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getDatabase, ref, onValue, update, set }
-from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
-
-/* 🔥 REPLACE WITH YOUR FIREBASE CONFIG */
-const firebaseConfig = {
-  apiKey: "YOUR_API_KEY",
-  authDomain: "YOUR_AUTH_DOMAIN",
-  databaseURL: "YOUR_DATABASE_URL",
-  projectId: "YOUR_PROJECT_ID",
-};
-
-const app = initializeApp(firebaseConfig);
-const db = getDatabase(app);
-
-let isUnlocked = false;
-let candidates = [];
-
-/* Create default if empty */
-const candidatesRef = ref(db, "candidates");
-
-onValue(candidatesRef, (snapshot) => {
-    if (!snapshot.exists()) {
-        let defaultData = Array(9).fill().map((_, i) => ({
-            name: "Candidate " + (i + 1),
-            votes: 0
-        }));
-        set(candidatesRef, defaultData);
-    } else {
-        candidates = snapshot.val();
-        render();
-    }
-});
-
-/* Render */
-function render() {
-    const container = document.getElementById("candidates");
-    container.innerHTML = "";
-
-    candidates.forEach((c, index) => {
-        container.innerHTML += `
-            <div class="candidate">
-                <div class="candidate-name">${c.name}</div>
-                <div class="score" id="score-${index}">${c.votes}</div>
-            </div>
-        `;
-    });
-}
-
-/* Animation */
-function animateCounter(element, start, end) {
-    let duration = 300;
-    let startTime = null;
-
-    function updateAnim(currentTime) {
-        if (!startTime) startTime = currentTime;
-        let progress = currentTime - startTime;
-        let value = Math.floor(start + (end - start) * (progress / duration));
-        element.textContent = value;
-
-        if (progress < duration) {
-            requestAnimationFrame(updateAnim);
-        } else {
-            element.textContent = end;
-        }
-    }
-
-    element.classList.add("animate");
-    setTimeout(() => element.classList.remove("animate"), 200);
-
-    requestAnimationFrame(updateAnim);
-}
-
-/* Voting */
-function addVote(index) {
-    const voteRef = ref(db, "candidates/" + index);
-    update(voteRef, {
-        votes: candidates[index].votes + 1
-    });
-}
-
-function minusVote(index) {
-    if (candidates[index].votes > 0) {
-        const voteRef = ref(db, "candidates/" + index);
-        update(voteRef, {
-            votes: candidates[index].votes - 1
-        });
-    }
-}
-
-/* Reset */
-function resetAllVotes() {
-    let entered = prompt("Enter Reset Password:");
-    if (entered === "admin") {
-        let resetData = candidates.map(c => ({
-            name: c.name,
-            votes: 0
-        }));
-        set(candidatesRef, resetData);
-        isUnlocked = true;
-        alert("All votes reset ✅ Editing unlocked 🔓");
-    } else {
-        alert("Wrong Password ❌");
-    }
-}
-
-/* Keyboard Controls */
-document.addEventListener("keydown", function(event) {
-
-    if (event.ctrlKey && event.altKey && event.key.toLowerCase() === "z") {
-        event.preventDefault();
-        isUnlocked = !isUnlocked;
-        console.log(isUnlocked ? "Unlocked 🔓" : "Locked 🔒");
-        return;
-    }
-
-    if (event.ctrlKey && event.altKey && event.key.toLowerCase() === "r") {
-        event.preventDefault();
-        resetAllVotes();
-        return;
-    }
-
-    if (!isUnlocked) return;
-
-    let number = null;
-
-    if (event.code.startsWith("Digit")) {
-        number = parseInt(event.code.replace("Digit", ""));
-    }
-
-    if (event.code.startsWith("Numpad")) {
-        number = parseInt(event.code.replace("Numpad", ""));
-    }
-
-    if (number >= 1 && number <= 9) {
-        if (event.shiftKey) {
-            minusVote(number - 1);
-        } else {
-            addVote(number - 1);
-        }
-    }
-});
-
-</script>
-
-</body>
-</html>
+<body
