--- a/index.html
+++ b/index.html
@@ -54,4 +54,140 @@ body {
 </style>
 </head>
 
-<body
+<body>
+
+<div class="wrapper" id="candidates"></div>
+
+<script>
+let defaultCandidates = Array(9).fill().map(() => ({ name: "", votes: 0 }));
+
+let isUnlocked = false; // 🔒 Locked by default
+
+let candidates = JSON.parse(localStorage.getItem("electionData")) || defaultCandidates;
+
+function saveData() {
+    localStorage.setItem("electionData", JSON.stringify(candidates));
+}
+
+function render() {
+    const container = document.getElementById("candidates");
+    container.innerHTML = "";
+
+    candidates.forEach((c, index) => {
+        container.innerHTML += `
+            <div class="candidate">
+                <div class="candidate-name">${c.name}</div>
+                <div class="score" id="score-${index}">${c.votes}</div>
+                <button class="minus-btn" onclick="secureMinus(${index})">VOTES</button>
+            </div>
+        `;
+    });
+}
+
+function animateCounter(element, start, end) {
+    let duration = 300;
+    let startTime = null;
+
+    function update(currentTime) {
+        if (!startTime) startTime = currentTime;
+        let progress = currentTime - startTime;
+        let value = Math.floor(start + (end - start) * (progress / duration));
+        element.textContent = value;
+
+        if (progress < duration) {
+            requestAnimationFrame(update);
+        } else {
+            element.textContent = end;
+        }
+    }
+
+    element.classList.add("animate");
+    setTimeout(() => element.classList.remove("animate"), 200);
+
+    requestAnimationFrame(update);
+}
+
+function addVote(index) {
+    let oldValue = candidates[index].votes;
+    candidates[index].votes++;
+    saveData();
+    animateCounter(document.getElementById(`score-${index}`), oldValue, candidates[index].votes);
+}
+
+function minusVote(index) {
+    if (candidates[index].votes > 0) {
+        let oldValue = candidates[index].votes;
+        candidates[index].votes--;
+        saveData();
+        animateCounter(document.getElementById(`score-${index}`), oldValue, candidates[index].votes);
+    }
+}
+
+function secureAdd(index) {
+    if (!isUnlocked) return;
+    addVote(index);
+}
+
+function secureMinus(index) {
+    if (!isUnlocked) return;
+    minusVote(index);
+}
+
+/* 🔐 RESET (CTRL + ALT + R) */
+function resetAllVotes() {
+    let entered = prompt("Enter Reset Password:");
+    if (entered === "admin") {
+        candidates.forEach(c => c.votes = 0);
+        saveData();
+        render();
+        isUnlocked = true;
+        alert("All votes reset ✅ Editing unlocked 🔓");
+    } else {
+        alert("Wrong Password ❌");
+    }
+}
+
+/* 🎹 Keyboard Control */
+document.addEventListener("keydown", function(event) {
+
+    /* Toggle Edit Mode (CTRL + ALT + Z) */
+    if (event.ctrlKey && event.altKey && event.key.toLowerCase() === "z") {
+        event.preventDefault();
+        isUnlocked = !isUnlocked;
+        console.log(isUnlocked ? "Unlocked 🔓" : "Locked 🔒");
+        return;
+    }
+
+    /* Reset (CTRL + ALT + R) */
+    if (event.ctrlKey && event.altKey && event.key.toLowerCase() === "r") {
+        event.preventDefault();
+        resetAllVotes();
+        return;
+    }
+
+    if (!isUnlocked) return;
+
+    let number = null;
+
+    if (event.code.startsWith("Digit")) {
+        number = parseInt(event.code.replace("Digit", ""));
+    }
+
+    if (event.code.startsWith("Numpad")) {
+        number = parseInt(event.code.replace("Numpad", ""));
+    }
+
+    if (number >= 1 && number <= 9) {
+        if (event.shiftKey) {
+            minusVote(number - 1);
+        } else {
+            addVote(number - 1);
+        }
+    }
+});
+
+render();
+</script>
+
+</body>
+</html>
